# Lexical-Analyzer

./: CFG_Rules  CFG_Rules.txt  CMakeLists.txt  FinalAnalyzer.cbp  FinalAnalyzer.depend  NFA.cpp  NFA.h  Parsing.cpp  Parsing.h  input.txt  main.cpp  table.cpp  table.h
DFA/: DFA.cpp  DFA.h  DfaState.cpp  DfaState.h
LexicalAnalyzerSimulator/: Simulator.cpp  Simulator.h  TransitionTable.txt  code.txt  out.txt
NFA/: NFA.cpp  NFA.h
